--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-streams",
+  "name": "node-samples",
   "version": "1.0.0",
-  "description": "",
+  "description": "A list of basic nodejs sample excercises and sample code snippets",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,16 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "brotli": "^1.3.2",
+    "express": "^4.15.3",
+    "express-bunyan-logger": "^1.3.2",
+    "express-pino-logger": "^2.0.0",
     "recast": "^0.11.18",
     "rimraf": "^2.5.4"
   },
   "dependencies": {
     "benchmark": "^2.1.4",
-    "bindings": "^1.2.1",
-    "nan": "^2.6.2",
     "request": "2.79.0",
     "requestretry": "1.12.0"
   },
