--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "A list of basic nodejs sample excercises and sample code snippets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/**/*.spec.js -t=10000",
     "build": "babel -w src/ -d build/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "brotli": "^1.3.2",
+    "chai": "^4.1.2",
     "express": "^4.15.3",
     "express-bunyan-logger": "^1.3.2",
     "express-pino-logger": "^2.0.0",
+    "mocha": "^5.1.1",
     "recast": "^0.11.18",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "sinon": "^4.5.0",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "benchmark": "^2.1.4",
+    "body-parser": "^1.18.2",
+    "fast-json-body": "^1.1.0",
+    "fastify": "^1.2.1",
+    "graphql": "^0.13.2",
+    "hapi": "^17.3.1",
     "request": "2.79.0",
     "requestretry": "1.12.0"
   },
