--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.15.3",
     "express-bunyan-logger": "^1.3.2",
     "express-pino-logger": "^2.0.0",
+    "lerna": "^2.10.1",
     "mocha": "^5.1.1",
     "recast": "^0.11.18",
     "rimraf": "^2.5.4",
