Add repro steps for lerna-fastify-typescript errors

--- a/packages/node-snippets-logger/package.json
+++ b/packages/node-snippets-logger/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "compile": "tsc"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pino": "^4.16.1"
+  }
 }
