--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha src/**/*.spec.js -t=10000",
-    "build": "babel -w src/ -d build/"
+    "build": "babel -w src/ -d build/",
+    "compile": "lerna exec -- npm run compile"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^9.6.6",
     "brotli": "^1.3.2",
     "chai": "^4.1.2",
     "express": "^4.15.3",
@@ -20,7 +22,8 @@
     "recast": "^0.11.18",
     "rimraf": "^2.5.4",
     "sinon": "^4.5.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "typescript": "^2.8.3"
   },
   "dependencies": {
     "benchmark": "^2.1.4",
