--- a/packages/node-snippets-server/package.json
+++ b/packages/node-snippets-server/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fastify": "^1.3.0",
     "node-snippets-logger": "^1.0.0"
+  },
+  "typings": "dist/index.d.ts",
+  "typescript": {
+    "definition": "dist/index.d.ts"
   }
 }
