--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "apollo-server-fastify": "^1.0.2",
     "benchmark": "^2.1.4",
     "body-parser": "^1.18.2",
+    "debug": "^4.1.0",
     "fast-json-body": "^1.1.0",
     "fastify": "^1.2.1",
     "graphql": "^0.13.2",
     "hapi": "^17.3.1",
     "node-tailor": "^3.7.1",
     "request": "2.79.0",
-    "requestretry": "1.12.0"
+    "requestretry": "1.12.0",
+    "stylus": "^0.54.5"
   },
   "gypfile": true
 }
